Rename claude-code/ to skills/ and add Homebrew caveats
- Rename SKILL.md to skills/fastmail.md
- Update goreleaser to install skill file to share/fm/
- Add post-install caveats showing symlink command for Claude Code
- Update README with correct paths for both Homebrew and manual install
- Document --json fields syntax and additional search operators in skill

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -35,6 +35,7 @@ archives:
     files:
       - LICENSE*
       - README*
+      - skills/fastmail.md
 
 checksum:
   name_template: "checksums.txt"
@@ -57,5 +58,10 @@ brews:
     license: MIT
     install: |
       bin.install "fm"
+      (share/"fm").install "skills/fastmail.md"
     test: |
       system "#{bin}/fm", "version"
+    caveats: |
+      To use fm with Claude Code, create a symlink to the skill file:
+        mkdir -p ~/.claude/commands
+        ln -sf #{share}/fm/fastmail.md ~/.claude/commands/fastmail.md
